# capturecard-display

./: Cargo.toml  LICENSE  README.md  capturecard-display.desktop
src/: audio.rs  main.rs  settings.rs  video.rs
