[package]
name = "capturecard-display"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ccdisplay"
path = "src/main.rs"

[dependencies]
uvc = "0.2"
# uvc = { path = "../../libuvc-rs" }
anyhow = "1"
egui = "0.19"
eframe = "0.19"
clap = { version = "4.0.12", features = ["derive"] }
os_pipe = { version = "1.1.1", features = ["io_safety"] }
flume = { version = "0.10.14", default-features = false, features = ["async"] }
ctrlc = "3.2.3"
ordered-float = "3.2.0"
futures-util = { version = "0.3.24", default-features = false, features = ["async-await-macro"] }

[dependencies.pulse]
package = "libpulse-binding"
version = "2.26"
