[package]
name = "capturecard-display"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ccdisplay"
path = "src/main.rs"

[dependencies]
# uvc = "0.2"
uvc = { path = "../../libuvc-rs", features = ["rusb"] }
anyhow = "1"
egui = "0.19"
eframe = { version = "0.19", features = ["persistence"] }
os_pipe = { version = "1.1.1", features = ["io_safety"] }
flume = { version = "0.10.14", default-features = false, features = ["async", "select"] }
ctrlc = "3.2.3"
ordered-float = "3.2.0"
futures-util = { version = "0.3.24", default-features = false, features = ["async-await-macro"] }
rusb = "0.9.1"

[dependencies.pulse]
package = "libpulse-binding"
version = "2.26"
